--- a/QLLH.Web/ClientApp/src/app/quan-ly-tkb-theo-lop/quan-ly-tkb-theo-lop.component.html
+++ b/QLLH.Web/ClientApp/src/app/quan-ly-tkb-theo-lop/quan-ly-tkb-theo-lop.component.html
@@ -17,8 +17,8 @@
                 <td>{{ l.maGv }}</td>
                 <td>{{ l.tenGv }}</td>
                 <td>
-                  <a [routerLink]="['/chi-tiet-tkb-theo-lop']" class="btn btn-primary">
-                    <i class="fa fa-info-circle" aria-hidden="true"></i>
+                  <a [routerLink]="['/chi-tiet-tkb-theo-lop', l.maLop]" class="btn btn-success">
+                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
                   </a>
                 </td>
               </tr>
