--- a/QLLH.Web/ClientApp/src/app/chi-tiet-lop-hoc/chi-tiet-lop-hoc.component.html
+++ b/QLLH.Web/ClientApp/src/app/chi-tiet-lop-hoc/chi-tiet-lop-hoc.component.html
@@ -10,6 +10,30 @@
       
       <div class="tab-panels">
         <section id="giaoVien" class="tab-panel">
+          <nav class="navbar navbar-light bg-light">
+            <div class="nav">
+              <div class="listBtn">
+                <a class="btn btn-outline-dark" href="javascript:window.location.href=window.location.href">
+                  <i class="fa fa-book" aria-hidden="true"></i> Danh sách
+                </a>
+              </div>
+              <div class="rowBtn">
+                <div class="btn-group dropright">
+                  <button id="row" type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ size }}
+                  </button>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" *ngFor="let r of listRowGiaoVien" (click)="chonSoDongHienThiGiaoVien(r.row)">{{ r.row }}</a>
+                  </div>
+                </div>
+              </div>
+              <div class="themBtn">
+                <button type="button" class="btn btn-outline-primary" (click)="openModalAddGiaoVien()">
+                  <i class="fa fa-plus-square-o fa-lg" aria-hidden="true"></i> Thêm giáo viên 
+                </button>
+              </div>
+            </div>
+          </nav>
           <table class="table">
             <thead>
               <tr>
@@ -29,10 +53,7 @@
                 <td>{{ gv.gioiTinh }}</td>
                 <td>{{ gv.soDt }}</td>
                 <td>
-                  <a class="btn btn-success" (click)="openModalAddEditGiaoVien(i)">
-                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                  </a>
-                  <a class="btn btn-danger" (click)="openModalDeleteGiaoVien(i)">
+                  <a class="btn btn-danger" (click)="openModalDeleteGiaoVien(i)" dis [ngStyle]="{'display': gv.maLop == maLop ? 'none' : ''}">
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                   </a>
                 </td>
@@ -52,6 +73,25 @@
           <!-- End Pagination -->
         </section>
         <section id="hocSinh" class="tab-panel">
+          <nav class="navbar navbar-light bg-light">
+            <div class="nav">
+              <div class="listBtn">
+                <a class="btn btn-outline-dark" href="javascript:window.location.href=window.location.href">
+                  <i class="fa fa-book" aria-hidden="true"></i> Danh sách
+                </a>
+              </div>
+              <div class="rowBtn">
+                <div class="btn-group dropright">
+                  <button id="row" type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    {{ size }}
+                  </button>
+                  <div class="dropdown-menu">
+                    <a class="dropdown-item" *ngFor="let r of listRowHocSinh" (click)="chonSoDongHienThiHocSinh(r.row)">{{ r.row }}</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </nav>
           <table class="table">
             <thead>
               <tr>
@@ -69,9 +109,6 @@
                 <td>{{ hs.tenLop }}</td>
                 <td>{{ hs.gioiTinh }}</td>
                 <td>
-                  <a class="btn btn-success" (click)="openModalAddEditHocSinh(i)">
-                    <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                  </a>
                   <a class="btn btn-danger" (click)="openModalDeleteHocSinh(i)">
                     <i class="fa fa-trash-o" aria-hidden="true"></i>
                   </a>
@@ -96,68 +133,36 @@
   </div>
 </div>
 
-<!-- Modal Add and Edit Giao Vien -->
-<div class="modal fade" id="modalAddEditGiaoVien" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal Add Giao Vien -->
+<div class="modal fade" id="modalAddGiaoVien" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Sửa giáo viên</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Thêm giáo viên bộ môn của lớp</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
       <div class="modal-body">
         <div class="row">
-            <div class="col-2 label">Mã giáo viên</div>
-            <div class="col-4">
-              <input type="text" class="form-control" [(ngModel)]="giaoVien.maGv" disabled />
-            </div>
-            <div class="col-2 label">Tên giáo viên</div>
-            <div class="col-4">
-              <input type="text" class="form-control" placeholder="Nhập tên giáo viên" [(ngModel)]="giaoVien.tenGv" />
-            </div>
-        </div>
-        <div class="row">
-          <div class="col-2 label">Môn giảng dạy</div>
+          <div class="col-2 label">Tên môn học</div>
           <div class="col-4">
-            <select class="form-control" id="monHoc" [(ngModel)]="giaoVien.maMh">
-              <option class="option-item" *ngFor="let mh of listMonHoc" [ngValue]="mh.maMh">{{ mh.tenMh }}</option>
+            <select class="form-control" id="monHoc" (change)="chonGiaoVienTheoMonHoc()">
+              <option></option>
+              <option class="option-item" *ngFor="let mh of listMonHoc" value="{{ mh.maMh }}">{{ mh.tenMh }}</option>
             </select>
           </div>
-          <div class="col-2 label">Ngày sinh</div>
+          <div class="col-2 label">Tên giáo viên</div>
           <div class="col-4">
-            <input type="date" class="form-control" id="ngaySinh" [(ngModel)]="giaoVien.ngaySinh" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-2 label">Giới tính</div>
-          <div class="col-4">
-            <select class="form-control" id="gioiTinh" [(ngModel)]="giaoVien.gioiTinh">
-              <option class="option-item">Nam</option>
-              <option class="option-item">Nữ</option>
+            <select class="form-control" id="giaoVien" [(ngModel)]="giaoVienLop.maGv">
+              <option class="option-item" *ngFor="let gv of listGVTheoMH" [ngValue]="gv.maGv">{{ gv.tenGv }}</option>
             </select>
-          </div>
-          <div class="col-2 label">Số điện thoại</div>
-          <div class="col-4">
-            <input type="text" class="form-control" placeholder="Nhập số điện thoại" [(ngModel)]="giaoVien.soDt" />
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-2 label">Chủ nhiệm lớp</div>
-          <div class="col-4">
-            <select class="form-control" id="lop" [(ngModel)]="giaoVien.maLop">
-              <option *ngFor="let l of listLop" [ngValue]="l.maLop">{{ l.tenLop }}</option>
-            </select>
-          </div>
-          <div class="col-2 label">Địa chỉ</div>
-          <div class="col-4">
-            <input type="text" class="form-control" placeholder="Nhập địa chỉ" [(ngModel)]="giaoVien.diaChi" />
           </div>
         </div>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-        <button type="submit" class="btn btn-success" (click)="suaGiaoVien()">Sửa</button>
+        <button id="deleteBtn" type="button" class="btn btn-primary" (click)="themGiaoVien()">Thêm</button>
       </div>
     </div>
   </div>
@@ -175,75 +180,11 @@
         </button>
       </div>
       <div class="modal-body">
-        Bạn có muốn xóa giáo viên này không ?
+        Bạn có muốn xóa giáo viên ra khỏi lớp này không ?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
         <button id="deleteBtnGiaoVien" type="button" class="btn btn-danger">Xóa</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End Modal -->
-
-<!-- Modal Add and Edit Hoc Sinh -->
-<div class="modal fade" id="modalAddEditHocSinh" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog modal-lg" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Sửa học sinh</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <div class="row">
-            <div class="col-2 label">Mã học sinh</div>
-            <div class="col-4">
-              <input type="text" class="form-control" [(ngModel)]="hocSinh.maHs" disabled />
-            </div>
-            <div class="col-2 label">Tên học sinh</div>
-            <div class="col-4">
-              <input type="text" class="form-control" placeholder="Nhập tên học sinh" [(ngModel)]="hocSinh.tenHs" />
-            </div>
-        </div>
-        <div class="row">
-          <div class="col-2 label">Tên lớp</div>
-          <div class="col-4">
-            <select class="form-control" id="lop" [(ngModel)]="hocSinh.maLop">
-              <option *ngFor="let l of listLop" [ngValue]="l.maLop">{{ l.tenLop }}</option>
-            </select>
-          </div>
-          <div class="col-2 label">Tên giáo viên</div>
-          <div class="col-4">
-            <select class="form-control" id="giaoVien" [(ngModel)]="hocSinh.maGv" searchable="Search here..">
-              <option *ngFor="let gv of listGiaoVien.data" [ngValue]="gv.maGv">{{ gv.tenGv }}</option>
-            </select>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-2 label">Ngày sinh</div>
-          <div class="col-4">
-            <input type="date" class="form-control" [(ngModel)]="hocSinh.ngaySinh" />
-          </div>
-          <div class="col-2 label">Giới tính</div>
-          <div class="col-4">
-            <select class="form-control" id="gioiTinh" [(ngModel)]="hocSinh.gioiTinh">
-              <option>Nam</option>
-              <option>Nữ</option>
-            </select>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-2 label">Địa chỉ</div>
-          <div class="col-10">
-            <input type="text" class="form-control" placeholder="Nhập địa chỉ" [(ngModel)]="hocSinh.diaChi" />
-          </div>
-        </div>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
-        <button type="submit" class="btn btn-success" (click)="suaHocSinh()">Sửa</button>
       </div>
     </div>
   </div>
@@ -261,7 +202,7 @@
         </button>
       </div>
       <div class="modal-body">
-        Bạn có muốn xóa học sinh này không ?
+        Bạn có muốn xóa học sinh ra khỏi lớp này không ?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
