--- a/QLLH.Web/ClientApp/src/app/chi-tiet-tkb-theo-giao-vien/chi-tiet-tkb-theo-giao-vien.component.html
+++ b/QLLH.Web/ClientApp/src/app/chi-tiet-tkb-theo-giao-vien/chi-tiet-tkb-theo-giao-vien.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-  <div class="container">
+  <div>
     <nav class="navbar navbar-light bg-light">
       <div class="navThoiKhoaBieu">
         <div class="thoiKhoaBieu">
@@ -19,6 +19,8 @@
         </div>
       </div>
     </nav>
+  </div>
+  <div class="tableTKBGiaoVien">
     <table class="table">
       <thead>
         <tr>
