--- a/QLLH.Web/ClientApp/src/app/app.component.html
+++ b/QLLH.Web/ClientApp/src/app/app.component.html
@@ -1,6 +1,6 @@
-<body>
-  <app-nav-menu></app-nav-menu>
-  <div class="container">
+<main style="display: flex;">
+  <app-side-bar style="flex-basis: 15%; background-color: #32373d; height: 100vh;"></app-side-bar>
+  <div class="main" style="flex-basis: 80%; margin: 0 auto; margin-top: 30px;">
     <router-outlet></router-outlet>
   </div>
-</body>
+</main>
