--- a/QLLH.Web/ClientApp/src/app/chi-tiet-tkb-theo-lop/chi-tiet-tkb-theo-lop.component.css
+++ b/QLLH.Web/ClientApp/src/app/chi-tiet-tkb-theo-lop/chi-tiet-tkb-theo-lop.component.css
@@ -1,15 +1,10 @@
-.container {
-    margin-top: 50px;  
-    min-width: 1200px;
+.tableTKBTheoLop {
+    margin: 0 20px 0 20px;
 }
 
 .body {
-    min-width: 1200px;
     margin: 0 auto;
-    margin-bottom: 50px;
     border: 1px solid #e1e1ea;
-    border-radius: 10px;
-    box-shadow: 18px 20px 60px -9px rgba(0,0,0,0.75);
 }
 
 tbody td, tr {
