--- a/QLLH.Web/ClientApp/src/app/chi-tiet-tkb-theo-lop/chi-tiet-tkb-theo-lop.component.html
+++ b/QLLH.Web/ClientApp/src/app/chi-tiet-tkb-theo-lop/chi-tiet-tkb-theo-lop.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-  <div class="container">
+  <div>
     <nav class="navbar navbar-light bg-light">
       <div class="navThoiKhoaBieu">
         <div class="thoiKhoaBieu">
@@ -8,17 +8,19 @@
           </a>
         </div>
         <div class="capNhatBtnTKB">
-          <button type="button" class="btn btn-outline-success">
+          <button type="button" class="btn btn-outline-success" (click)="capNhatDanhSachThoiKhoaBieu()">
             <i class="fa fa-pencil-square-o fa-lg" aria-hidden="true"></i> Cập nhật
           </button>
         </div>
         <div class="lamMoiBtnTKB">
-          <button type="button" class="btn btn-outline-primary">
+          <button type="button" class="btn btn-outline-primary" (click)="lamMoiThoiKhoaBieu()">
             <i class="fa fa-plus-square-o fa-lg" aria-hidden="true"></i> Làm mới
           </button>
         </div>
       </div>
     </nav>
+  </div>
+  <div class="tableTKBTheoLop">
     <table class="table">
       <thead>
         <tr>
@@ -32,44 +34,54 @@
             <span>Tiết {{ t.maTiet }}<br />({{ t.thoiGian }})</span>
           </th>
           <td>
-            <select class="form-control">
-              <option></option>
+            <select class="form-control tietHoc">
               <option *ngFor="let mh of listMonHoc" id="{{ mh.maMh }}-{{ t.maTiet }}-1">{{ mh.tenMh }}</option>
             </select>
           </td>
           <td>
-            <select class="form-control">
-              <option></option>
+            <select class="form-control tietHoc">
               <option *ngFor="let mh of listMonHoc" id="{{ mh.maMh }}-{{ t.maTiet }}-2">{{ mh.tenMh }}</option>
             </select>
           </td>
           <td>
-            <select class="form-control">
-              <option></option>
+            <select class="form-control tietHoc">
               <option *ngFor="let mh of listMonHoc" id="{{ mh.maMh }}-{{ t.maTiet }}-3">{{ mh.tenMh }}</option>
             </select>
           </td>
           <td>
-            <select class="form-control">
-              <option></option>
+            <select class="form-control tietHoc">
               <option *ngFor="let mh of listMonHoc" id="{{ mh.maMh }}-{{ t.maTiet }}-4">{{ mh.tenMh }}</option>
             </select>
           </td>
           <td>
-            <select class="form-control">
-              <option></option>
+            <select class="form-control tietHoc">
               <option *ngFor="let mh of listMonHoc" id="{{ mh.maMh }}-{{ t.maTiet }}-5">{{ mh.tenMh }}</option>
             </select>
           </td>
           <td>
-            <select class="form-control">
-              <option></option>
+            <select class="form-control tietHoc">
               <option *ngFor="let mh of listMonHoc" id="{{ mh.maMh }}-{{ t.maTiet }}-6">{{ mh.tenMh }}</option>
             </select>
           </td>
         </tr>
       </tbody>
     </table>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="modalCapNhatGVBM" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Cập nhật giáo viên bộ môn</h5>
+      </div>
+      <div class="modal-body" style="text-align: center;">
+        Bạn phải cập nhật đầy đủ giáo viên bộ môn của lớp trước khi cập nhật thời khóa biểu !!!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-success" (click)="capNhatGVBM()">Cập nhật</button>
+      </div>
+    </div>
   </div>
 </div>
 
