--- a/QLLH.Web/ClientApp/src/app/quan-ly-giao-vien/quan-ly-giao-vien.component.html
+++ b/QLLH.Web/ClientApp/src/app/quan-ly-giao-vien/quan-ly-giao-vien.component.html
@@ -1,5 +1,5 @@
 <div class="body">
-  <div class="container">
+  <div>
     <nav class="navbar navbar-light bg-light">
       <div class="navGiaoVien">
         <div class="listGiaoVienBtn">
@@ -7,23 +7,16 @@
             <i class="fa fa-book" aria-hidden="true"></i> Danh sách
           </a>
         </div>
-        <div class="rowBtn">
-          <div class="btn-group dropright">
-            <button id="row" type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              {{ size }}
-            </button>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" *ngFor="let r of listRow" (click)="chonSoDongHienThi(r.row)">{{ r.row }}</a>
-            </div>
-          </div>
-        </div>
         <div class="dropdownLopBtn">
           <div class="btn-group dropright">
             <button id="tenMonHoc" type="button" class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Môn học
             </button>
             <div class="dropdown-menu">
-              <a class="dropdown-item" *ngFor="let mh of listMonHoc" (click)="timKiemGiaoVienTheoMonHoc(1, mh.tenMh)">{{ mh.tenMh }}</a>
+              <a class="dropdown-item" 
+                *ngFor="let mh of listMonHoc"
+                [ngStyle]="{'display': mh.maMh != 1 ? 'block' : 'none'}"
+                (click)="timKiemGiaoVienTheoMonHoc(1, mh.tenMh)">{{ mh.tenMh }}</a>
             </div>
           </div>
         </div>
@@ -41,38 +34,38 @@
       </form>
     </nav>
   </div>
-  <div class="container">
-      <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Mã giáo viên</th>
-              <th scope="col">Tên giáo viên</th>
-              <th scope="col">Môn giảng dạy</th>
-              <th scope="col">Chủ nhiệm lớp</th>
-              <th scope="col">Giới tính</th>        
-              <th scope="col">Số điện thoại</th>
-              <th scope="col">Hành động</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let gv of listGiaoVien.data; index as i">
-              <td>{{ gv.maGv }}</td>
-              <td>{{ gv.tenGv }}</td>
-              <td>{{ gv.tenMh }}</td>
-              <td>{{ gv.tenLop }}</td>
-              <td>{{ gv.gioiTinh }}</td>
-              <td>{{ gv.soDt }}</td>
-              <td>
-                <a class="btn btn-success" (click)="openModalAddEdit(true, i)">
-                  <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                </a>
-                <a class="btn btn-danger" (click)="openModalDelete(i)">
-                  <i class="fa fa-trash-o" aria-hidden="true"></i>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-      </table>
+  <div class="tableGiaoVien">
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Mã giáo viên</th>
+            <th scope="col">Tên giáo viên</th>
+            <th scope="col">Môn giảng dạy</th>
+            <th scope="col">Chủ nhiệm lớp</th>
+            <th scope="col">Giới tính</th>        
+            <th scope="col">Số điện thoại</th>
+            <th scope="col">Hành động</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let gv of listGiaoVien.data; index as i">
+            <td>{{ gv.maGv }}</td>
+            <td>{{ gv.tenGv }}</td>
+            <td>{{ gv.tenMh }}</td>
+            <td>{{ gv.tenLop }}</td>
+            <td>{{ gv.gioiTinh }}</td>
+            <td>{{ gv.soDt }}</td>
+            <td>
+              <a class="btn btn-success" (click)="openModalAddEdit(true, i)">
+                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+              </a>
+              <a class="btn btn-danger" (click)="openModalDelete(i)">
+                <i class="fa fa-trash-o" aria-hidden="true"></i>
+              </a>
+            </td>
+          </tr>
+        </tbody>
+    </table>
   </div>
   <!-- Pagination -->
   <div class="pagination-bar">
@@ -113,7 +106,10 @@
           <div class="col-2 label">Môn giảng dạy</div>
           <div class="col-4">
             <select class="form-control" id="monHoc" [(ngModel)]="giaoVien.maMh">
-              <option class="option-item" *ngFor="let mh of listMonHoc" [ngValue]="mh.maMh">{{ mh.tenMh }}</option>
+              <option class="option-item" 
+                      *ngFor="let mh of listMonHoc" 
+                      [ngValue]="mh.maMh"
+                      [ngStyle]="{'display': mh.maMh != 1 ? 'block' : 'none'}">{{ mh.tenMh }}</option>
             </select>
           </div>
           <div class="col-2 label">Ngày sinh</div>
