--- a/QLLH.Web/ClientApp/src/app/quan-ly-lop-hoc/quan-ly-lop-hoc.component.html
+++ b/QLLH.Web/ClientApp/src/app/quan-ly-lop-hoc/quan-ly-lop-hoc.component.html
@@ -1,32 +1,41 @@
 <div class="body">
-  <div class="container">
-      <table class="table">
-          <thead>
-            <tr>
-              <th scope="col">Mã lớp học</th>
-              <th scope="col">Tên lớp</th>
-              <th scope="col">Mã giáo viên</th>
-              <th scope="col">Giáo viên chủ nhiệm</th>
-              <th scope="col">Hành động</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let l of listLop.data; index as i">
-              <td>{{ l.maLop }}</td>
-              <td>{{ l.tenLop }}</td>
-              <td>{{ l.maGv }}</td>
-              <td>{{ l.tenGv }}</td>
-              <td>
-                <a [routerLink]="['/chi-tiet-lop-hoc', l.maLop]" class="btn btn-primary">
-                  <i class="fa fa-info-circle" aria-hidden="true"></i>
-                </a>
-                <a class="btn btn-success" (click)="openModalEdit(i)">
-                  <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
-                </a>
-              </td>
-            </tr>
-          </tbody>
-      </table>
+  <nav class="navbar navbar-light bg-light">
+    <div class="navLopHoc">
+      <div class="listLopHocBtn">
+        <a class="btn btn-outline-dark" href="javascript:window.location.href=window.location.href">
+          <i class="fa fa-book" aria-hidden="true"></i> Lớp học
+        </a>
+      </div>
+    </div>
+  </nav>
+  <div class="tableLopHoc">
+    <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Mã lớp học</th>
+            <th scope="col">Tên lớp</th>
+            <th scope="col">Mã giáo viên</th>
+            <th scope="col">Giáo viên chủ nhiệm</th>
+            <th scope="col">Hành động</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let l of listLop.data; index as i">
+            <td>{{ l.maLop }}</td>
+            <td>{{ l.tenLop }}</td>
+            <td>{{ l.maGv }}</td>
+            <td>{{ l.tenGv }}</td>
+            <td>
+              <a [routerLink]="['/chi-tiet-lop-hoc', l.maLop]" class="btn btn-primary">
+                <i class="fa fa-info-circle" aria-hidden="true"></i>
+              </a>
+              <a class="btn btn-success" (click)="openModalEdit(i)">
+                <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+              </a>
+            </td>
+          </tr>
+        </tbody>
+    </table>
   </div>
 
   <!-- Pagination -->
